server/assets/app/css/pages/project_automations.css
#project-automations {
  display: flex;
  flex-direction: column;
  gap: var(--noora-spacing-9);

  .noora-tab-menu-horizontal {
    padding: var(--noora-spacing-0);
  }

  & > [data-part="title"] {
    margin: 0;
    padding-top: var(--noora-spacing-7);
    color: var(--noora-surface-label-primary);
    font: var(--noora-font-weight-medium) var(--noora-font-heading-xlarge);
  }

  & > [data-part="subtitle"] {
    margin: 0;
    color: var(--noora-surface-label-primary);
    font: var(--noora-font-weight-medium) var(--noora-font-heading-large);
  }

  & > [data-part="flaky-detection-card-section"],
  & > [data-part="quarantine-card-section"] {
    display: flex;
    flex-direction: column;
    gap: var(--noora-spacing-6);

    & > [data-part="header"] {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: flex-start;

      & > [data-part="title-group"] {
        display: flex;
        flex-direction: column;
        gap: var(--noora-spacing-2);

        & > [data-part="title"] {
          color: var(--noora-surface-label-primary);
          font: var(--noora-font-weight-medium) var(--noora-font-heading-medium);
        }

        & > [data-part="subtitle"] {
          color: var(--noora-surface-label-secondary);
          font: var(--noora-font-weight-regular) var(--noora-font-body-medium);
        }
      }
    }

    & > [data-part="content"] {
      display: flex;
      flex-direction: column;
      gap: var(--noora-spacing-5);
    }
  }

  & [data-part="slack-section"] {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid var(--noora-surface-border-secondary);
    padding: var(--noora-spacing-4) 0;

    & > [data-part="content"] {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      gap: var(--noora-spacing-4);

      & > .noora-tag {
        margin-top: var(--noora-spacing-4);
      }

      & > [data-part="toggle"] {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: var(--noora-spacing-3);

        & > [data-part="label"] {
          color: var(--noora-surface-label-primary);
          font: var(--noora-font-weight-medium) var(--noora-font-body-large);
        }
      }

      & > [data-part="subtitle"] {
        color: var(--noora-surface-label-secondary);
        font: var(--noora-font-weight-regular) var(--noora-font-body-medium);
      }
    }

    &:last-child {
      border-bottom: none;
    }

    & > [data-part="row-content"] {
      display: flex;
      flex-direction: row;
      align-items: center;
      gap: var(--noora-spacing-4);

      & > [data-part="label"] {
        color: var(--noora-surface-label-primary);
        font: var(--noora-font-weight-medium) var(--noora-font-body-medium);
      }

      & .noora-text-input {
        width: 80px;
      }
    }

    & > [data-part="stacked-row-content"] {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      gap: var(--noora-spacing-2);

      & > [data-part="label"] {
        color: var(--noora-surface-label-primary);
        font: var(--noora-font-weight-medium) var(--noora-font-body-medium);
      }

      & > [data-part="label-with-tooltip"] {
        display: flex;
        align-items: center;
        gap: var(--noora-spacing-2);

        & > [data-part="label"] {
          color: var(--noora-surface-label-primary);
          font: var(--noora-font-weight-medium) var(--noora-font-body-medium);
        }

        & .noora-tooltip [data-part="trigger"] {
          color: var(--noora-surface-label-secondary);

          & svg {
            width: 16px;
            height: 16px;
          }
        }
      }

      & .noora-text-input {
        width: 280px;
      }

      & input[type="number"] {
        -moz-appearance: textfield;
        appearance: textfield;

        &::-webkit-inner-spin-button,
        &::-webkit-outer-spin-button {
          -webkit-appearance: none;
          margin: 0;
        }
      }
    }
  }
}

